--- a/style.css
+++ b/style.css
@@ -1,17 +1,43 @@
-
 html {
     width: 100%;
     height: 100%;
     position: absolute;
-    background: rgb(255,160,253);
     background: linear-gradient(90deg, rgba(255,160,253,1) 0%, rgba(248,111,209,1) 50%, rgba(255,174,188,1) 100%);
     background-size: 600% 100%;
     font-family: "Helvetica Neue", sans-serif;
 }
 
+img{
+  width: 560px;
+	height: 315px;
+}
 .prof-box {
 	width: 400px;
-	height: 375px;
+	height: 350px;
+	background: white;
+	padding: 40px;
+	color: black;
+	margin: 0 auto;
+	margin-top: 100px;
+	text-align: center;
+  border-radius: 50px;
+}
+
+.prof-box-1 {
+	width: 500px;
+	height: 300px;
+	background: white;
+	padding: 40px;
+	color: white;
+	margin: 0 auto;
+	margin-top: 100px;
+	text-align: center;
+  border-radius: 50px;
+}
+
+.prof-box-2 {
+	width: 400px;
+	height: 300px;
 	background: white;
   opacity: 0.7;
   filter: alpha(opacity=70);
@@ -22,6 +48,22 @@ html {
 	text-align: center;
   border-radius: 50px;
 }
+
+.big-box {
+	width: 900px;
+	height: 1750px;
+	background: white;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+	padding: 40px;
+	color: white;
+	margin: 0 auto;
+	margin-top: 100px;
+	text-align: center;
+  border-radius: 50px;
+}
+
+
 h1 {
   color: black;
 	font-weight: 100;
@@ -46,13 +88,10 @@ li {
  letter-spacing: 1;
 }
 
-.social-icons{
-  color: #040100;
-	font-size: 40px;
-}
 
 .social-icons a {
-  color: ##FFFFFF;
+  color: #000000;
+  font-size: 40px;
 
 }
 
@@ -61,5 +100,4 @@ li {
 	width: 380px;
 	margin: 0 auto;
 	border-top: 1px solid black;
-}
 }
