--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 html {
     width: 100%;
     height: 100%;
     position: absolute;
     background: linear-gradient(90deg, rgba(255,160,253,1) 0%, rgba(248,111,209,1) 50%, rgba(255,174,188,1) 100%);
     background-size: 600% 100%;
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
 
 img{
@@ -67,7 +68,7 @@ img{
 h1 {
   color: black;
 	font-weight: 100;
-	letter-spacing: 8;
+	letter-spacing: 5;
 	font-size: 40px;
 }
 
