--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ img{
 }
 .prof-box {
 	width: 400px;
-	height: 350px;
+	height: 400px;
 	background: white;
 	padding: 40px;
 	color: black;
@@ -24,9 +24,23 @@ img{
   border-radius: 50px;
 }
 
-.prof-box-1 {
+
+.big-box {
+	width: 900px;
+	height: 2000px;
+	background: white;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+	padding: 40px;
+	color: white;
+	margin: 0 auto;
+	margin-top: 100px;
+	text-align: center;
+  border-radius: 50px;
+}
+prof-box-1 {
 	width: 500px;
-	height: 300px;
+	height: 350px;
 	background: white;
 	padding: 40px;
 	color: white;
@@ -38,21 +52,7 @@ img{
 
 .prof-box-2 {
 	width: 400px;
-	height: 300px;
-	background: white;
-  opacity: 0.7;
-  filter: alpha(opacity=70);
-	padding: 40px;
-	color: white;
-	margin: 0 auto;
-	margin-top: 100px;
-	text-align: center;
-  border-radius: 50px;
-}
-
-.big-box {
-	width: 900px;
-	height: 1750px;
+	height: 350px;
 	background: white;
   opacity: 0.7;
   filter: alpha(opacity=70);
