--- a/style.css
+++ b/style.css
@@ -23,7 +23,33 @@ img{
 	text-align: center;
   border-radius: 50px;
 }
+.prof-box-1 {
+	width: 500px;
+	height: 300px;
+	background: white;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+	padding: 40px;
+	color: white;
+	margin: 0 auto;
+	margin-top: 100px;
+	text-align: center;
+  border-radius: 50px;
+}
 
+.prof-box-2 {
+	width: 400px;
+	height: 300px;
+	background: white;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+	padding: 40px;
+	color: white;
+	margin: 0 auto;
+	margin-top: 100px;
+	text-align: center;
+  border-radius: 50px;
+}
 
 .big-box {
 	width: 900px;
