--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@ html {
     background-size: 600% 100%;
     font-family: 'Quicksand', sans-serif;
 }
-
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
 img{
   width: 560px;
 	height: 315px;
