--- a/style.css
+++ b/style.css
@@ -11,13 +11,19 @@ html {
   width: device-width ;
   zoom: 1.0 ;
 }
-img{
-  width: 560px;
-	height: 315px;
+img {
+  vertical-align: middle;
+  width: 200px;
+  height: auto;
+  border-radius: 50%
 }
+//img{
+  //width: 560px;
+//	height: 315px;
+//}
 .prof-box {
-	width: 400px;
-	height: 400px;
+	width: 600px;
+	height: 575px;
 	background: white;
 	padding: 40px;
 	color: black;
@@ -28,7 +34,7 @@ img{
 }
 .prof-box-1 {
 	width: 500px;
-	height: 300px;
+	height: 350px;
 	background: white;
   opacity: 0.7;
   filter: alpha(opacity=70);
@@ -42,7 +48,7 @@ img{
 
 .prof-box-2 {
 	width: 400px;
-	height: 300px;
+	height: 350px;
 	background: white;
   opacity: 0.7;
   filter: alpha(opacity=70);
